web/style.css
/* Copyright © 2021 Mark E Sowden */

@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=DotGothic16&family=Grenze+Gotisch&family=Playfair+Display+SC&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');

table {
    table-layout: fixed;
    width: 100%;
}

tbody tr:nth-child(odd) {background: #200222;}
tbody tr:nth-child(even) {background: #400222;}

td, th {
    border: 0;
    text-align: left;
    padding: 2px;
}

td:nth-of-type(1), th:nth-of-type(1) {
    word-break: break-all;
    width: calc(50% - 10em);
}

td:nth-of-type(2), th:nth-of-type(2) {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    width: calc(50% - 10em);
}

td:nth-of-type(3), th:nth-of-type(3) {
    white-space: nowrap;
    width: 5em;
}

td:nth-of-type(4), th:nth-of-type(4) {
    white-space: nowrap;
    width: 5em;
}

th {
    font-size: 20px;
    font-weight: bold;
}

.dropbtn {
    padding: 5px;

    font-size: 35px;
    font-weight: bold;
    font-family: 'Loto', sans-serif;

    cursor: pointer;

    border: 4px solid #ff0a51;
    border-radius: 5px;

    color: #ff0a51;
    overflow: visible;
    text-align: center;
    background: #e7e7e7;
}

.dropbtn:hover, .dropbtn:focus {
    border: 4px solid darkred;
    border-radius: 5px;
}

.dropdown {
    position: relative;
    display: inline-block;
    font-size: 20px;
    text-align: left;
}

.dropdown-content {
    display: none;
    text-decoration: none;
}

h1 {
    font-size: 48px;
    color: #ff0a51;
    margin-bottom: 0px;
    padding-bottom: 0px;
}

body {
    background: #171c2b;
    color: #d2cdd0;
    font-family: 'Loto', sans-serif;
    font-size: 16px;
    margin: 15px;
    padding-left: 15px;
    padding-right: 15px;
    height: 100%;
}

a {
    color: #ff0a51;
    text-decoration: none;
    font-weight: bold;
}

a:hover {
    color: darkred;
}

.subtitle {
    margin: 0 0 16px;
    font-size: 22px;
}

.content {
    /*! width: 1024px; */
    text-align: left;
    /*align-content: left;*/

    margin-left: auto;
    margin-right: auto;

    min-height: 315px;
}

.center {
    width: 100%;
    align-content: center;
    text-align: center;

    margin-left: auto;
    margin-right: auto;
}

.heading {
    margin-top: 64px;
    /*float: left;*/
}

.footer {
    margin-top: auto;
    bottom: 5%;
    padding-top: 20px;
    padding-bottom: 20px;
}

.bubble-block {
    background: black;
    border-radius: 1em;
    padding: 1em;
    margin-top: 1em;
    margin: 0.2em;
    display: inline-block;
}

hr {
    border-bottom: 8px solid;
    border-radius: 5px;
    border-color: #ff0a51;
    color: #ff0a51;
    overflow: visible;
    text-align: center;
    background: none;
}

/*****************************************************/
/* Animations */

@keyframes fadein {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.show {
    display: block;
    animation-duration: 2s;
    animation-name: fadein;
}

